console log correctly tinyWeb

--- a/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
+++ b/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
@@ -83,7 +83,9 @@ function isObject(o) {
 
   // should console log biggestWeb
   findInObj(theCobWeb, "comb", "theCobWeb");
-
+  
+// should console log tinyWeb
+findInObj(theCobWeb, "toenails", "theCobWeb");
 </script>
 
 </body>
