console log correctly

--- a/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
+++ b/04-jquery/01-Activities/19-Cobweb/cobweb-starter.html
@@ -83,9 +83,15 @@ function isObject(o) {
 
   // should console log biggestWeb
   findInObj(theCobWeb, "comb", "theCobWeb");
-  
+
 // should console log tinyWeb
 findInObj(theCobWeb, "toenails", "theCobWeb");
+
+// should console log otherBigWeb  
+findInObj(theCobWeb, "headphones", "theCobWeb");
+
+console.log("should have returned biggestWeb, tinyWeb, otherBigWeb");
+
 </script>
 
 </body>
