created global varialbes

--- a/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
+++ b/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
@@ -30,6 +30,7 @@
           <h3 class="card-header">Calculator</h3>
 
           <div class="card-body">
+            <button type="button" class="btn btn-primary" value="1"><h1>1</h1></button>
             <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
             <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
             <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
