if operator is selected, start populating the second numbe

--- a/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
+++ b/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
@@ -102,6 +102,13 @@ else {
 // console.log(firstNumber);
 });
 
+// All a on click listener to all elements that have the class "operator"
+$(".operator").on("click", function() {
+
+    // Set isOpertorChosen to true so we start writing to secondNumber
+    isOperatorChosen = true;
+})
+
 
 });
 
