add on click listener to all the elements that have the class eequal

--- a/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
+++ b/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
@@ -114,6 +114,10 @@ $(".operator").on("click", function() {
     //Set the HTML of the #operator to the text of what was clicked
     $("#operator").html($(this).text());
 });
+//Add an on click listener to all elements that have the class "equal"
+$(".equal").on("click", function() {
+
+});
 
 
 });
