--- a/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
+++ b/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
@@ -129,6 +129,12 @@ $(".equal").on("click", function() {
     if(operator === "minus") {
         result = firstNumber = secondNumber;
     }
+    if(operator === "times") {
+        result = firstNumber * secondNumber;
+    }
+    if(operator === "divide") {
+        result = firstNumber / secondNumber;
+    }
     $("#result").html(result);
 });
 
