Math.pow() result dispaly to html

--- a/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
+++ b/04-jquery/01-Activities/20-jQueryCalculator/jquery-calculator.html
@@ -135,6 +135,9 @@ $(".equal").on("click", function() {
     if(operator === "divide") {
         result = firstNumber / secondNumber;
     }
+    if(operator === "power") {
+        result = Math.pow(firstNumber, secondNumber);
+    }
     $("#result").html(result);
 });
 
