--- a/05-timers/coin-flip.html
+++ b/05-timers/coin-flip.html
@@ -20,7 +20,17 @@
     <button id="tails">Tails</button>
 
     <br>
-
+    <TABLE BGCOLOR=CCFFFF>
+        <TR>
+        <TD>You Guessed: <span id = "guess"></span></TD>
+        <TD>Computer Fliped</TD>
+        </TR>
+        <TR>
+        <TD>Cell contents</TD>
+        <TD>Cell contents</TD>
+        </TR>
+        </TABLE>
+        
     <div> You guessed:
       <span id="guess"></span>
     </div>
