--- a/05-timers/coin-flip.html
+++ b/05-timers/coin-flip.html
@@ -26,7 +26,7 @@
         <TD>Computer Fliped</TD>
         </TR>
         <TR>
-        <TD>Cell contents</TD>
+        <TD>C <span id = "coin-image"></span></TD>
         <TD>Cell contents</TD>
         </TR>
         </TABLE>
