dislays user image

--- a/05-timers/coin-flip.html
+++ b/05-timers/coin-flip.html
@@ -27,7 +27,7 @@
         </TR>
         <TR>
         <TD>C <span id = "coin-image"></span></TD>
-        <TD>Cell contents</TD>
+        <TD>Cell contents<span id = "coin-image1"></span></TD>
         </TR>
         </TABLE>
         
