dislays user image

--- a/05-timers/coin-flip.html
+++ b/05-timers/coin-flip.html
@@ -26,8 +26,8 @@
         <TD>Computer Fliped</TD>
         </TR>
         <TR>
-        <TD>C <span id = "coin-image"></span></TD>
-        <TD>Cell contents<span id = "coin-image1"></span></TD>
+        <TD>C <span id = "coin-image1"></span></TD>
+        <TD>Cell contents<span id = "coin-image"></span></TD>
         </TR>
         </TABLE>
         
