dislays user image

--- a/05-timers/coin-flip.html
+++ b/05-timers/coin-flip.html
@@ -23,15 +23,15 @@
     <TABLE BGCOLOR=CCFFFF>
         <TR>
         <TD>You Guessed: <span id = "guess"></span></TD>
-        <TD>Computer Fliped</TD>
+        <TD>Computer Fliped: <span id = "guess1"></span></TD>
         </TR>
         <TR>
-        <TD>C <span id = "coin-image1"></span></TD>
-        <TD>Cell contents<span id = "coin-image"></span></TD>
+        <TD> <span id = "coin-image1"></span></TD>
+        <TD><span id = "coin-image"></span></TD>
         </TR>
         </TABLE>
         
-    <div> You guessed:
+    <div> 
       <span id="guess"></span>
     </div>
 
