see the console log when you press the button

--- a/05-timers/01-Activities/05-This/this.html
+++ b/05-timers/01-Activities/05-This/this.html
@@ -28,7 +28,7 @@
 
     };
 
-    // Answere: It will console log the window
+    // Answer: It will console log the window
 
     outside();
 
@@ -37,6 +37,7 @@
       //  2. What will be console logged out? What is *this* in this case?
       console.log(this);
     });
+// Answer: When you click the button, it will console the object button: <button id = "button"> CLICK ME! </button>
 
     var bob = {
       firstName: "Bob",
