--- a/05-timers/01-Activities/06-Timeout/timeout.html
+++ b/05-timers/01-Activities/06-Timeout/timeout.html
@@ -34,7 +34,9 @@
 
       //  Timeouts in JavaScript
       //  Set our window alert to run one second after the function's called.
-
+        var windowTimeout = setTimeout(function() {
+            alert("Alert #1");
+        }, 1000);
       //  Start on click.
         //  Set the button alert's timeout to run three seconds after the function's called.
 
