alert#2 pops out after three second by click the button

--- a/05-timers/01-Activities/06-Timeout/timeout.html
+++ b/05-timers/01-Activities/06-Timeout/timeout.html
@@ -39,7 +39,11 @@
         }, 1000);
       //  Start on click.
         //  Set the button alert's timeout to run three seconds after the function's called.
-
+        $("#start").on("click", function() {
+            delayButtonAlert = setTimeout(function() {
+                alert("Alert#2");
+            }, 3000);
+        });
       //  Cancel on click.
         // Clear the button alert's timeout.
       
