clear the alert#1 by pressing window alert cancel button

--- a/05-timers/01-Activities/06-Timeout/timeout.html
+++ b/05-timers/01-Activities/06-Timeout/timeout.html
@@ -54,7 +54,12 @@
       
       //  Cancel window alert on click.
         //  Clear the timeout, and stop the window alert.
-      
+        $("#window-cancel").on("click", function() {
+          // Clear the button alert's timeout.
+
+           clearTimeout(windowTimeout);
+        });
+
     </script>
 
   </body>
