setTimeout for different times

--- a/05-timers/01-Activities/08-SimpleTimer/simple-timer.html
+++ b/05-timers/01-Activities/08-SimpleTimer/simple-timer.html
@@ -25,12 +25,17 @@
       // Step 1:
       // Use the following link inside the Audio function below:
       // https://p.scdn.co/mp3-preview/ed5a443bc86176135ebca8a114f66f4d814d4c90
-      var audio = new Audio("LINK AN AUDIO FILE HERE");
+      var audio = new Audio("raven.mp3");
 
       //  Step 2: do the following between the --- comments
       //  after 5 seconds, execute the fiveSeconds function
+      setTimeout(fiveSeconds, 1000 * 5);
       //  after 10 seconds, execute the tenSeconds function
+      setTimeout(tenSeconds, 1000 * 10);
+
       //  after 15 seconds, execute the timeUp function
+      setTimeout(timeUp, 1000 * 15);
+
       // ---------------------
       // CODE STEP TWO HERE
       // ---------------------
@@ -42,6 +47,8 @@
 
         // in the element with an id of time-left add an h2 saying About 10 Seconds Left!
         // console log 10 seconds left
+        $("#timer-left").append("<h2> Time's UP!</h2>");
+        console.log("10 seconds left!");
         
       }
 
