setTimeout for different times

--- a/05-timers/01-Activities/08-SimpleTimer/simple-timer.html
+++ b/05-timers/01-Activities/08-SimpleTimer/simple-timer.html
@@ -47,7 +47,7 @@
 
         // in the element with an id of time-left add an h2 saying About 10 Seconds Left!
         // console log 10 seconds left
-        $("#timer-left").append("<h2> Time's UP!</h2>");
+        $("#timer-left").append("<h2> About 10 second Left!</h2>");
         console.log("10 seconds left!");
         
     }
@@ -69,7 +69,7 @@
         // console log done
         
         $("#timer-left").append("<h2> Time's UP!</h2>");
-        console.log("10 seconds left!");
+        console.log("Done!");
         // The following line will play the audio file we linked to above.
         audio.play();
 
