--- a/05-timers/01-Activities/09-Interval/interval.html
+++ b/05-timers/01-Activities/09-Interval/interval.html
@@ -35,13 +35,16 @@ setting the new `intervalId` making sure we would not have multiple instances.*/
 
     <!-- Script -->
     <script type="text/javascript">
-
+    // Interval Demonstration
+    // Set our number counter to 100/
     var number = 100;
-
+// Variable that will hold our interval ID when we excute
+// the "run" function
     var intervalId;
 
+    // When the stop button gets clicked, execute the stop function
     $("#stop").on("click", stop);
-
+  // When the resume button gets clicked, execute the run function
     $("#resume").on("click", run);
 
     function run() {
