--- a/05-timers/01-Activities/09-Interval/interval.html
+++ b/05-timers/01-Activities/09-Interval/interval.html
@@ -1,5 +1,3 @@
-
-
 <!--//*Our Bug
 
 * Explain that in our code we execute the `run` function each time that we click 
@@ -14,14 +12,14 @@ setting the new `intervalId` making sure we would not have multiple instances.*/
 
 <html lang="en-us">
 
-  <head>
+<head>
 
     <meta charset="UTF-8">
     <title>Document</title>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div id="show-number"></div>
 
@@ -35,17 +33,17 @@ setting the new `intervalId` making sure we would not have multiple instances.*/
 
     <!-- Script -->
     <script type="text/javascript">
-    // Interval Demonstration
-    // Set our number counter to 100/
-    var number = 100;
-// Variable that will hold our interval ID when we excute
-// the "run" function
-    var intervalId;
+        // Interval Demonstration
+        // Set our number counter to 100/
+        var number = 100;
+        // Variable that will hold our interval ID when we excute
+        // the "run" function
+        var intervalId;
 
-    // When the stop button gets clicked, execute the stop function
-    $("#stop").on("click", stop);
-  // When the resume button gets clicked, execute the run function
-    $("#resume").on("click", run);
+        // When the stop button gets clicked, execute the stop function
+        $("#stop").on("click", stop);
+        // When the resume button gets clicked, execute the run function
+        $("#resume").on("click", run);
 
 
         // The run function sets an interval
@@ -53,34 +51,39 @@ setting the new `intervalId` making sure we would not have multiple instances.*/
         // ***** BUG FIX ******
         // Clearing the intervalId prior to setting our new intervalId will not
         // allow the multiple instances
-    function run() {
-        clearInterval(intervalId);
-      intervalId = setInterval(decrement, 1000);
-    }
+        function run() {
+            clearInterval(intervalId);
+            intervalId = setInterval(decrement, 1000);
+        }
+        // The decrement function
+        function decrement() {
+            
+            // Decrease number by one.
+            number--;
 
-    function decrement() {
+            // Show the number in the #show-number tag
+            $("#show-number").html("<h2>" + number + "</h2>");
 
-      number--;
+            // Once number his the zero...
+            if (number === 0) {
 
-      $("#show-number").html("<h2>" + number + "</h2>");
+                // ...Run the stop function
+                stop();
 
-      if (number === 0) {
+                // Alert the user that time is up.
+                alert("Time Up!");
+            }
+        }
 
-        stop();
+        function stop() {
 
-        alert("Time Up!");
-      }
-    }
+            clearInterval(intervalId);
+        }
 
-    function stop() {
-
-      clearInterval(intervalId);
-    }
-
-    run();
+        run();
 
     </script>
 
-  </body>
+</body>
 
 </html>
