bug is fixed and complted with the comments

--- a/05-timers/01-Activities/09-Interval/interval.html
+++ b/05-timers/01-Activities/09-Interval/interval.html
@@ -75,11 +75,16 @@ setting the new `intervalId` making sure we would not have multiple instances.*/
             }
         }
 
+        // This stop the function
         function stop() {
 
+            // Clears our intervalId
+            // We just pass the name of the interval
+            // to the clearInterval function
             clearInterval(intervalId);
         }
 
+        // Execute the run function.
         run();
 
     </script>
