check for palindrom logic

--- a/05-timers/01-Activities/22-PalindromeDetector/index.html
+++ b/05-timers/01-Activities/22-PalindromeDetector/index.html
@@ -14,6 +14,8 @@
     <h1>Reverse in Place w/Palindrome Detector</h1>
     <h3>Your result should appear in the div below:</h3>
 
+    <div id="result1"></div>
+
     <div id="result"></div>
 
     <!-- Script -->
