added js and linked

--- a/05-timers/01-Activities/22-PalindromeDetector/index1.html
+++ b/05-timers/01-Activities/22-PalindromeDetector/index1.html
@@ -19,7 +19,7 @@
     <div id="result"></div>
 
     <!-- Script -->
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app1.js"></script>
 
   </body>
 
