--- a/05-timers/01-Activities/20-jQueryToDo/index.html
+++ b/05-timers/01-Activities/20-jQueryToDo/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <title>Todo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
   </head>
 
