--- a/05-timers/01-Activities/22-PalindromeDetector/index1.html
+++ b/05-timers/01-Activities/22-PalindromeDetector/index1.html
@@ -17,6 +17,8 @@
     <div id="result1"></div>
 
     <div id="result"></div>
+    <div id="result2"></div>
+
 
     <!-- Script -->
     <script type="text/javascript" src="app1.js"></script>
