add index html for PrimeChecker

--- a/05-timers/01-Activities/23-PrimeChecker/index.html
+++ b/05-timers/01-Activities/23-PrimeChecker/index.html
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-
+      <h1> Prime Checker</h1>
+    <div id = result>  </div>
     <!-- Script -->
     <script src="app.js"></script>
 
