--- a/05-timers/01-Activities/24-RecursiveFibonacci/index.html
+++ b/05-timers/01-Activities/24-RecursiveFibonacci/index.html
@@ -12,8 +12,8 @@
 
   <body>
 
-    <!-- <script src="recursiveFibSolution.js"></script> -->
-    <script src="simpleRecursion.js"></script>
+    <script src="recursiveFibSolution.js"></script>
+    <!-- <script src="simpleRecursion.js"></script> -->
 
 
   </body>
