--- a/05-timers/01-Activities/24-RecursiveFibonacci/index.html
+++ b/05-timers/01-Activities/24-RecursiveFibonacci/index.html
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <h1> Fibonacci Number</h1>
+    <div id = result>  </div>
 
     <script src="recursiveFibSolution.js"></script>
     <!-- <script src="simpleRecursion.js"></script> -->
