fibonacci function displays in html

--- a/05-timers/01-Activities/24-RecursiveFibonacci/index.html
+++ b/05-timers/01-Activities/24-RecursiveFibonacci/index.html
@@ -14,8 +14,10 @@
     <h1> Fibonacci Number</h1>
     <div id = result>  </div>
 
-    <script src="recursiveFibSolution.js"></script>
+    <!-- <script src="recursiveFibSolution.js"></script> -->
     <!-- <script src="simpleRecursion.js"></script> -->
+    <script src="fibonacci.js"></script>
+
 
 
   </body>
