--- a/06-ajax/01-Activities/01-CustomerObject/customer-object.html
+++ b/06-ajax/01-Activities/01-CustomerObject/customer-object.html
@@ -29,6 +29,7 @@
     };
 
     // Step 1: Log the First Name below using console.log
+    console.log(customer.firstName);
     // Step 2: Log the Last Name below using console.log
     // Step 3: Log the State of the Address below using console.log
     // Step 4: Log the Home Phone Number below using console.log
