--- a/06-ajax/01-Activities/01-CustomerObject/customer-object.html
+++ b/06-ajax/01-Activities/01-CustomerObject/customer-object.html
@@ -32,7 +32,8 @@
     console.log(customer.firstName);
     // Step 2: Log the Last Name below using console.log
     console.log(customer.lastName);
-    // Step 3: Log the State of the Address below using console.log
+    // Step 3: Log the State of the Address below using console.
+    consolt.log(customer.address.state);
     // Step 4: Log the Home Phone Number below using console.log
     // Step 5: Log the Fax Number below using console.log
   </script>
