--- a/06-ajax/01-Activities/01-CustomerObject/customer-object.html
+++ b/06-ajax/01-Activities/01-CustomerObject/customer-object.html
@@ -35,6 +35,7 @@
     // Step 3: Log the State of the Address below using console.
     consolt.log(customer.address.state);
     // Step 4: Log the Home Phone Number below using console.log
+    console.log(customer.phoneNumber[0].number);
     // Step 5: Log the Fax Number below using console.log
   </script>
 
