--- a/06-ajax/01-Activities/01-CustomerObject/customer-object.html
+++ b/06-ajax/01-Activities/01-CustomerObject/customer-object.html
@@ -36,7 +36,8 @@
     consolt.log(customer.address.state);
     // Step 4: Log the Home Phone Number below using console.log
     console.log(customer.phoneNumber[0].number);
-    // Step 5: Log the Fax Number below using console.log
+    // Step 5: Log the Fax Number below using console.
+    console.log(customer.phoneNumber[1].number);
   </script>
 
 </body>
