--- a/06-ajax/01-Activities/02-Ajax_OMDB/single-ajax.html
+++ b/06-ajax/01-Activities/02-Ajax_OMDB/single-ajax.html
@@ -22,6 +22,12 @@
     });
 // ---------------------------------------------------------
 
+console.log("This console.log will probably happen first because of asynchronicity.");
+    var x = 2;
+    var y = 10;
+    var z = 13;
+    console.log("We can also assign some variables and do some arithmetic while we wait too: 2 + 10 + 13 = ", x + y + z);
+
   </script>
 
 </body>
