--- a/06-ajax/01-Activities/02-Ajax_OMDB/multiple-ajax.html
+++ b/06-ajax/01-Activities/02-Ajax_OMDB/multiple-ajax.html
@@ -60,6 +60,7 @@
     });
 // ---------------------------------------------------------
 
+    console.log("Because our AJAX requests are asynchronous, this line of code will most likely log first");
   </script>
 
 </body>
