--- a/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
+++ b/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
@@ -9,7 +9,18 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
-    // Example queryURL for Giphy API
+    // Example queryURL for Giphy 
+    var title = "space+jam";
+    var queryURL = "https://api.giphy.com/v1/gifs/trending?apikey=5siRB0jjirvJrobbHAQrHQWeJGv8jNLe";
+
+    $.ajax({
+      url: queryURL,
+      method: "GET"
+    }).then(function(response) {
+      console.log(response);
+      console.log(response.Runtime);
+    });
+
   </script>
 
 </body>
