--- a/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
+++ b/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
     // Example queryURL for Giphy 
-    var title = "space+jam";
+    //var title = "space+jam";
     var queryURL = "https://api.giphy.com/v1/gifs/trending?apikey=5siRB0jjirvJrobbHAQrHQWeJGv8jNLe";
 
     $.ajax({
