--- a/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
+++ b/06-ajax/01-Activities/04-Giphy_API/04-Giphy_API.html
@@ -18,7 +18,7 @@
       method: "GET"
     }).then(function(response) {
       console.log(response);
-      console.log(response.Runtime);
+      //console.log(response.Runtime);
     });
 
   </script>
