Added bujumbura html api key entered and console.log the response

--- a/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
+++ b/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
@@ -27,6 +27,7 @@
     }).then(function(response) {
 
       // Create CODE HERE to Log the queryURL
+      console.log(response);
       // Create CODE HERE to log the resulting object
       // Create CODE HERE to transfer content to HTML
       // Create CODE HERE to calculate the temperature (converted from Kelvin)
