transfer content to HTML wind speed

--- a/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
+++ b/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
@@ -39,7 +39,9 @@
 
 
                 // Create CODE HERE to transfer content to HTML
-                $(".city").html("<h1>" + response.name + "Weather Details </h1>")
+                $(".city").html("<h1>" + response.name + ": Weather Details </h1>")
+                $(".wind").html("Wind Speed: " + response.wind.speed);
+
                 // Create CODE HERE to calculate the temperature (converted from Kelvin)
                 // Hint: To convert from Kelvin to Fahrenheit: F = (K - 273.15) * 1.80 + 32
                 // Create CODE HERE to dump the temperature content into HTML
