transfer content to HTML temperature

--- a/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
+++ b/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
@@ -48,6 +48,10 @@
                 // Create CODE HERE to calculate the temperature (converted from Kelvin)
                 // Hint: To convert from Kelvin to Fahrenheit: F = (K - 273.15) * 1.80 + 32
                 // Create CODE HERE to dump the temperature content into HTML
+                        // Log the data in the console as well
+        console.log("Wind Speed: " + response.wind.speed);
+        console.log("Humidity: " + response.main.humidity);
+        console.log("Temperature (F): " + response.main.temp);
 
             });
     </script>
