--- a/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
+++ b/06-ajax/01-Activities/05-Bujumbura/bujumbura-easier.html
@@ -18,7 +18,7 @@
         var APIKey = "166a433c57516f51dfab1f7edaed8413";
 
         // Here we are building the URL we need to query the database
-        var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=rawalpindi,&units=imperial&appid=" + APIKey;
+        var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=Bujumbura,Burundi,&units=imperial&appid=" + APIKey;
 
         // We then created an AJAX call to the  openWeatherMap API
         $.ajax({
