response displays in the html

--- a/06-ajax/01-Activities/06-MovieJSONDump/movie-json-dump.html
+++ b/06-ajax/01-Activities/06-MovieJSONDump/movie-json-dump.html
@@ -57,7 +57,7 @@
 
                 // Create CODE HERE to Log the queryURL
 
-                console.log(queryURL);
+               // console.log(queryURL);
 
 
                 // Create CODE HERE to log the resulting object
@@ -65,7 +65,7 @@
 
 
                 // Create CODE HERE to transfer content to HTML
-               // $(".city").html("<h1>" + response.name + ": Weather Details </h1>")
+               $("#movie-view").html("<h1>" + response.Title + ": Movie Title </h1>")
             })
         // =================================================================
       });
