response displays in the html

--- a/06-ajax/01-Activities/06-MovieJSONDump/movie-json-dump.html
+++ b/06-ajax/01-Activities/06-MovieJSONDump/movie-json-dump.html
@@ -46,7 +46,7 @@
         // =================================================================
 
         // CODE GOES HERE
-        // We then created an AJAX call to the  openWeatherMap API
+        // We then created an AJAX call to the  OMDB API
         $.ajax({
             url: queryURL,
             method: "GET"
