empty the content inside the movies-view div

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -39,8 +39,9 @@
       // Function for displaying movie data
       function renderButtons() {
 
-        // Delete the content inside the movies-view div prior to adding new movies
+        // Delete the content inside the movies-view div prior to dding new movies
         // (this is necessary otherwise you will have repeat buttons)
+        $("#movies-view").empty();
 
         // Loop through the array of movies, then generate buttons for each movie in the array
 
