loop through the array fo movies

--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -44,6 +44,13 @@
         $("#movies-view").empty();
 
         // Loop through the array of movies, then generate buttons for each movie in the array
+        for(var i = 0; i < movies.length; i++) {
+
+           // Then dynamically generating buttons for each movie in the array.
+           // This code $("<button>") is all jQuery needs to create the start and end tag. 
+            // (<button></button>)
+            var a = $("<button");
+        }
 
       }
 
