--- a/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
+++ b/06-ajax/01-Activities/07-MovieButtonLayout/movie-button-layout-easier.html
@@ -50,6 +50,10 @@
            // This code $("<button>") is all jQuery needs to create the start and end tag. 
             // (<button></button>)
             var a = $("<button");
+
+            // Adding a class
+            a.addClass("movie");
+            
         }
 
       }
